--- a/app/custom.css
+++ b/app/custom.css
@@ -105,14 +105,14 @@
 }
 
 .profile-card {
-    background-color: #111111;
-    border: 1px solid #333333;
     border-radius: 8px;
     padding: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
     height: 100%;
+    background-color: #111;
+    border: 2px solid transparent;
+    border-image: linear-gradient(125deg, #C745C7 0%, #FF2525 37%, #fd00ff 100%);
+    border-image-slice: 100%;
+    border-image-slice: 1;
 }
 
 .profile-image {
@@ -126,8 +126,8 @@
 }
 
 .profile-intro {
-    font-size: 1.15rem;
-    color: #555;
+    font-size: 1.1rem;
+    color: #999;
     margin-bottom: 15px;
 }
 
