--- a/app/custom.css
+++ b/app/custom.css
@@ -4,7 +4,7 @@
 }
 
 .header-navigation {
-    padding: 15px 0;
+    padding: 8px 0;
     background-color: #111111;
 }
 
@@ -20,8 +20,12 @@
     color: #ffffff;
 }
 
+.header-navigation img {
+    width: 165px;
+}
+
 .navs .signup-btn {
-    padding: 10px 20px;
+    padding: 8px 16px;
     background-color: #145DC9;
     color: #ffffff;
     border: none;
@@ -42,7 +46,7 @@
     background: url('https://images.pexels.com/photos/262524/pexels-photo-262524.jpeg');
     background-size: cover;
     background-position: center;
-    padding: 100px 0;
+    padding: 200px 0;
     color: #ffffff;
 }
 
@@ -253,4 +257,44 @@
     font-weight: 600;
     margin-top: 10px;
     color: #333;
+}
+
+.flash-news {
+    background: #000000;
+    color: #ffffff;
+    padding: 10px 0;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+  }
+  
+  .flash-news a {
+    color: #ffffff;
+    text-decoration: none;
+    display: inline-block;
+    padding-left: 100%;
+    animation: scroll 24s linear infinite;
+  }
+  
+  @keyframes scroll {
+    from {
+      transform: translateX(0%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .flash-news a:hover {
+    animation-play-state: paused;
+  }
+
+  .header-navigation a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.banner-section {
+    background-color: #111111;
 }
